# crewai-agents

coder/: .gitignore  pyproject.toml  requirements.txt
coder/src/coder/: crew.py
coder/src/coder/config/: agents.yaml
debate/: README.md  pyproject.toml  requirements.txt
debate/src/debate/: crew.py  main.py
debate/src/debate/config/: agents.yaml
engineering_team/: pyproject.toml
engineering_team/src/engineering_team/: crew.py
engineering_team/src/engineering_team/config/: agents.yaml
financial_researcher/: .gitignore  pyproject.toml
financial_researcher/output/: report.md
financial_researcher/src/financial_researcher/: crew.py  main.py
stock_picker/: .gitignore  pyproject.toml
stock_picker/src/stock_picker/: crew.py  main.py
stock_picker/src/stock_picker/config/: agents.yaml
