[project]
name = "engineering_team"
version = "0.1.0"
description = "engineering_team using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "apscheduler>=3.11.2",
    "crewai[tools]==1.7.2",
    "fastapi>=0.128.0",
    "fastapi-sso>=0.17.0",
    "litellm>=1.75.3",
    "ollama>=0.6.1",
    "pydantic[email]>=2.11.10",
]

[project.scripts]
engineering_team = "engineering_team.main:run"
run_crew = "engineering_team.main:run"
train = "engineering_team.main:train"
replay = "engineering_team.main:replay"
test = "engineering_team.main:test"
run_with_trigger = "engineering_team.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
