[project]
name = "stock_picker"
version = "0.1.0"
description = "stock_picker using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "apscheduler>=3.11.2",
    "crewai[tools]==1.7.2",
    "fastapi>=0.128.0",
    "fastapi-sso>=0.17.0",
    "litellm>=1.75.3",
    "ollama>=0.6.1",
    "pydantic[email]>=2.11.10",
]

[project.scripts]
stock_picker = "stock_picker.main:run"
run_crew = "stock_picker.main:run"
train = "stock_picker.main:train"
replay = "stock_picker.main:replay"
test = "stock_picker.main:test"
run_with_trigger = "stock_picker.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
